samples/_failures_safe/1761263250_691120_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1050c319.c: In function ‘main’:
./samples/SAFE/__tmp_1050c319.c:129:20: error: expected ‘;’ at end of input
  129 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_1050c319.c:129:9: error: expected declaration or statement at end of input
  129 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_1050c319.c:129:9: error: expected declaration or statement at end of input
